--- a/terms&conditions.html
+++ b/terms&conditions.html
@@ -25,7 +25,9 @@
                   its services, at any time and for any reason. We will never
                   charge you for the app or its services without making it very
                   clear to you exactly what you’re paying for.
-                </p> <p>
+                </p>
+        <p>This License Agreement may not provide for usage rules for the Application that are in conflict with the latest <a href="https://www.apple.com/legal/internet-services/itunes/us/terms.html" target="_blank">App Store Terms of Service</a>. Dong Wang acknowledges that it had the opportunity to review said terms and this License Agreement is not conflicting with them.</p>
+        <p>
                   The Admob Earning Report app stores and processes personal data that
                   you have provided to us, to provide my
                   Service. It’s your responsibility to keep your phone and
